--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,10 @@ arr_macro = "0.1.3"
 # for sqlx and asynchronous
 sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
 tokio = { version = "1.15", features = ["full"]}
+
+# for actixweb example
+actix-rt = "2.8.0"
+actix-web = "4.3.1"
+env_logger = "0.10.0"
+serde = { version = "1.0.156", features = ["derive"] }
+serde_json = "1.0"
